@@ -1,4 +1,5 @@
 SUBDIRS = m4  src doc 
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST = config.rpath  config.rpath
+EXTRA_DIST = config.rpath  config.rpath autogen.sh README.CVS
+
